--- a/itin.html
+++ b/itin.html
@@ -19,17 +19,22 @@
     <div class="container mx-auto p-6">
         <h1 class="text-3xl font-bold text-center mb-6">Itinéraire de Toulouse à Loudenvielle et Les</h1>
         
-        <div class="bg-white shadow-md rounded-lg p-6 mb-6">
-            <h2 class="text-2xl font-semibold mb-4">Détails de l'itinéraire</h2>
-            <p><strong>Départ :</strong> Toulouse à 14h00</p>
-            <p><strong>Arrivée à Loudenvielle :</strong> 15h30</p>
-            <p><strong>Temps sur place :</strong> 1h30</p>
-            <p><strong>Visite guidée aux flambeaux :</strong> 17h00 - 18h30</p>
-            <p><strong>Départ de Loudenvielle :</strong> 18h30</p>
-            <p><strong>Arrivée à Les :</strong> 19h30</p>
-            <p><strong>Temps sur place :</strong> 1h</p>
-            <p><strong>Retour à Toulouse :</strong> 22h00</p>
-        </div>
+    <div class="bg-white shadow-md rounded-lg p-6 mb-6">
+    <h2 class="text-2xl font-semibold mb-4">Détails de l'itinéraire</h2>
+    <p><strong>Départ :</strong> Toulouse à 10h00</p>
+    <p><strong>Arrivée à Les :</strong> 11h30</p>
+    <p><strong>Temps sur place :</strong> 2h</p>
+    <p><strong>Départ de Les :</strong> 13h30</p>
+    <p><strong>Arrivée à Loudenvielle :</strong> 14h30</p>
+    <p><strong>Temps sur place :</strong> 2h</p>
+    <p><strong>Visite guidée aux flambeaux :</strong> 17h00 - 18h30</p>
+    <p><strong>Départ de Loudenvielle :</strong> 18h30</p>
+    <p><strong>Retour à Toulouse :</strong> 20h30</p>
+    <p><strong>Arrivée à Toulouse :</strong> 22h00</p>
+</div>
+
+
+
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
             <div class="bg-white shadow-md rounded-lg p-6">
